# cards-backend

./: .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js
migrations/: 20231221104424_create_users.down.sql  20231221104424_create_users.up.sql  20231221105337_create_decks.down.sql  20231221105337_create_decks.up.sql  20231221105351_create_cards.down.sql  20231221105351_create_cards.up.sql
src/: api.rs  main.rs  pages.rs  queries.rs
templates/: action.html  add_card.html  add_user.html  button.html  card.html  edit_card.html  error.html  glen.html  heading.html  home.html  index.html  test.html  users.html
tests_http/: cards.http  decks.http  get_users.http  users.http
