[package]
name = "cards-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenvy = "0.15.7"
askama = "0.12.1"
tower-http = { version = "0.5.0", features = ["fs"] }
chrono = { version = "0.4.31", features = ["serde"] }
